# chatter

./: README.md  pyproject.toml
src/chatter/: __init__.py  llama.py  openai.py
tests/: example.py
