[tool.poetry]
name = "chatter"
version = "0.1.0"
description = "Experimental generic tracing chat client"
authors = ["Johan Stenberg (MSFT) <johan.stenberg@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.9"
opentelemetry-distro = "^0.43b0"

[tool.poetry.group.dev.dependencies]
black = "^24"
mypy = "^1.8.0"
pyright = "^1.1.350"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
